--- a/Homework1/pom.xml
+++ b/Homework1/pom.xml
@@ -9,14 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hw1</artifactId>
+    <artifactId>Homework1</artifactId>
 
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hadoop.version>2.5.1</hadoop.version>
 
-        <remote.host.ip>192.168.3.221</remote.host.ip>
+        <remote.host.ip>10.16.10.109</remote.host.ip>
         <remote.host.name>root</remote.host.name>
         <remote.host.password>12345678</remote.host.password>
         <docker.container.name>duh</docker.container.name>
@@ -113,6 +113,18 @@
                                      todir="${remote.host.name}:${remote.host.password}@${remote.host.ip}:/root/" />
                                 <echo message="Coping execute job file: ${job.executor.script.name} completed" />
 
+                                <echo message="Coping file1 ..." />
+                                <scp trust="true" failonerror="true" verbose="off" sftp="true"
+                                     file="${basedir}/src/main/resources/file1"
+                                     todir="${remote.host.name}:${remote.host.password}@${remote.host.ip}:/root/" />
+                                <echo message="Coping file1 completed" />
+
+                                <echo message="Coping file2 ..." />
+                                <scp trust="true" failonerror="true" verbose="off" sftp="true"
+                                     file="${basedir}/src/main/resources/file2"
+                                     todir="${remote.host.name}:${remote.host.password}@${remote.host.ip}:/root/" />
+                                <echo message="Coping file2 completed" />
+
                                 <echo message="Changing rights to copied files ..." />
                                 <sshexec trust="true" failonerror="true"
                                          host="${remote.host.ip}"
@@ -135,6 +147,9 @@
                                 />
                                 <!--/etc/bootstrap.sh -bash-->
                                 <echo message="Hadoop cluster in demon mode is running" />
+
+                                <!--TODO add \r\n -> \n sed script removal in case of emergency moving from Win to Linux and wondering WTF?-->
+                                <!--sed -i -e 's/\r$//' create_mgw_3shelf_6xIPNI1P.sh-->
 
                                 <echo message="Running hadoop job ..." />
                                 <sshexec trust="true" failonerror="true"
