--- a/Homework1/pom.xml
+++ b/Homework1/pom.xml
@@ -19,7 +19,7 @@
         <remote.host.ip>10.16.10.109</remote.host.ip>
         <remote.host.name>root</remote.host.name>
         <remote.host.password>12345678</remote.host.password>
-        <docker.container.name>duh</docker.container.name>
+        <docker.container.name>homework1</docker.container.name>
         <job.executor.script.name>execute-job.sh</job.executor.script.name>
     </properties>
 
@@ -29,27 +29,6 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
-        </dependency>
-        <!-- Unit test artifacts -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.mrunit</groupId>
-            <artifactId>mrunit</artifactId>
-            <version>1.1.0</version>
-            <classifier>hadoop2</classifier>
-            <scope>test</scope>
-        </dependency>
-        <!-- Hadoop test artifact for running mini clusters -->
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-minicluster</artifactId>
-            <version>${hadoop.version}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -101,11 +80,11 @@
                                 />
                                 <echo message="Docker service started" />
 
-                                <echo message="Coping compiled jar: ${build.finalName} ..." />
+                                <echo message="Coping compiled jar: ${project.build.finalName} ..." />
                                 <scp trust="true" failonerror="true" verbose="off" sftp="true"
-                                     file="./${build.finalName}.jar"
+                                     file="./${project.build.finalName}.jar"
                                      todir="${remote.host.name}:${remote.host.password}@${remote.host.ip}:/root/" />
-                                <echo message="Coping compiled jar: ${build.finalName} completed" />
+                                <echo message="Coping compiled jar: ${project.build.finalName} completed" />
 
                                 <echo message="Coping execute job file: ${job.executor.script.name} ..." />
                                 <scp trust="true" failonerror="true" verbose="off" sftp="true"
@@ -115,13 +94,13 @@
 
                                 <echo message="Coping file1 ..." />
                                 <scp trust="true" failonerror="true" verbose="off" sftp="true"
-                                     file="${basedir}/src/main/resources/file1"
+                                     file="${basedir}/src/main/data/file1"
                                      todir="${remote.host.name}:${remote.host.password}@${remote.host.ip}:/root/" />
                                 <echo message="Coping file1 completed" />
 
                                 <echo message="Coping file2 ..." />
                                 <scp trust="true" failonerror="true" verbose="off" sftp="true"
-                                     file="${basedir}/src/main/resources/file2"
+                                     file="${basedir}/src/main/data/file2"
                                      todir="${remote.host.name}:${remote.host.password}@${remote.host.ip}:/root/" />
                                 <echo message="Coping file2 completed" />
 
