--- a/Homework5/gs-yarn-basic-container/src/main/resources/application.yml
+++ b/Homework5/gs-yarn-basic-container/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
         applicationDir: /app/gs-yarn-basic/
         client:
             files:
-              - "file:gs-yarn-basic-dist/target/gs-yarn-basic-dist/gs-yarn-basic-container-0.1.0.jar"
-              - "file:gs-yarn-basic-dist/target/gs-yarn-basic-dist/gs-yarn-basic-appmaster-0.1.0.jar"
+              - "file:gs-yarn-basic-container-1.0-SNAPSHOT.jar"
+              - "file:gs-yarn-basic-appmaster-1.0-SNAPSHOT.jar"
             launchcontext:
-                archiveFile: gs-yarn-basic-appmaster-0.1.0.jar
+                archiveFile: gs-yarn-basic-appmaster-1.0-SNAPSHOT.jar
         appmaster:
             containerCount: 1
             launchcontext:
-                archiveFile: gs-yarn-basic-container-0.1.0.jar
+                archiveFile: gs-yarn-basic-container-1.0-SNAPSHOT.jar
