--- a/Homework5/gs-yarn-basic-client/src/main/resources/application.yml
+++ b/Homework5/gs-yarn-basic-client/src/main/resources/application.yml
@@ -1,14 +1,15 @@
 spring:
     hadoop:
-        fsUri: hdfs://localhost:8020
-        resourceManagerHost: localhost
+    # fix hardcoded IP with something like http://stackoverflow.com/questions/5866015/rails-3-how-use-an-env-config-vars-in-a-settings-yml-file
+        fsUri: hdfs://172.17.0.2:9000
+        resourceManagerHost: 172.17.0.2
     yarn:
         appName: gs-yarn-basic
         applicationDir: /app/gs-yarn-basic/
         client:
             files:
-              - "file:gs-yarn-basic-container-1.0-SNAPSHOT.jar"
-              - "file:gs-yarn-basic-appmaster-1.0-SNAPSHOT.jar"
+                - "file:/opt/gs-yarn-basic-container-1.0-SNAPSHOT.jar"
+                - "file:/opt/gs-yarn-basic-appmaster-1.0-SNAPSHOT.jar"
             launchcontext:
                 archiveFile: gs-yarn-basic-appmaster-1.0-SNAPSHOT.jar
         appmaster:
