--- a/Homework5/gs-yarn-basic-container/pom.xml
+++ b/Homework5/gs-yarn-basic-container/pom.xml
@@ -15,9 +15,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-yarn-boot</artifactId>
-            <version>2.2.0.RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
